{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 43,
  "lineage": "ccba8687-d2e0-5ff5-0f1b-31c2c04201cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "medicure_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635186481360:internet-gateway/igw-0c496a2cac5b68f69",
            "id": "igw-0c496a2cac5b68f69",
            "owner_id": "635186481360",
            "tags": {
              "Name": "medicure-igw"
            },
            "tags_all": {
              "Name": "medicure-igw"
            },
            "vpc_id": "vpc-0f1801d1360e5ef31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.medicure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635186481360:route-table/rtb-0d70c47823c1e7aae",
            "id": "rtb-0d70c47823c1e7aae",
            "owner_id": "635186481360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c496a2cac5b68f69",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "medicure-public-rt"
            },
            "tags_all": {
              "Name": "medicure-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1801d1360e5ef31"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.medicure_igw",
            "aws_vpc.medicure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0289a2f804870f028",
            "route_table_id": "rtb-0d70c47823c1e7aae",
            "subnet_id": "subnet-0bab3d397ea0b2b26"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.medicure_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.medicure_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048cd4a319bbdb60c",
            "route_table_id": "rtb-0d70c47823c1e7aae",
            "subnet_id": "subnet-03ef776f14d8e30a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.medicure_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.medicure_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635186481360:security-group/sg-0e4f7ea72e4df7db5",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4f7ea72e4df7db5",
            "ingress": [],
            "name": "medicure-eks-sg",
            "name_prefix": "",
            "owner_id": "635186481360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "medicure-eks-sg"
            },
            "tags_all": {
              "Name": "medicure-eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1801d1360e5ef31"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.medicure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635186481360:security-group/sg-097d25dd85f94b462",
            "description": "Security group for Jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097d25dd85f94b462",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "medicure-jenkins-sg",
            "name_prefix": "",
            "owner_id": "635186481360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "medicure-jenkins-sg"
            },
            "tags_all": {
              "Name": "medicure-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1801d1360e5ef31"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.medicure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635186481360:subnet/subnet-0bab3d397ea0b2b26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bab3d397ea0b2b26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635186481360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medicure-public-1",
              "kubernetes.io/cluster/medicure-cluster-mdf": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "medicure-public-1",
              "kubernetes.io/cluster/medicure-cluster-mdf": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f1801d1360e5ef31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.medicure_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635186481360:subnet/subnet-03ef776f14d8e30a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ef776f14d8e30a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "635186481360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medicure-public-2",
              "kubernetes.io/cluster/medicure-cluster-mdf": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "medicure-public-2",
              "kubernetes.io/cluster/medicure-cluster-mdf": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f1801d1360e5ef31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.medicure_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "medicure_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635186481360:vpc/vpc-0f1801d1360e5ef31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0054815e5a1ef8275",
            "default_route_table_id": "rtb-00fbd20d3dd8832c7",
            "default_security_group_id": "sg-0299322f63ed7542a",
            "dhcp_options_id": "dopt-06d3626ed89042578",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f1801d1360e5ef31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00fbd20d3dd8832c7",
            "owner_id": "635186481360",
            "tags": {
              "Name": "medicure-vpc"
            },
            "tags_all": {
              "Name": "medicure-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}